# ntag-mfrc522

./: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
ntag-mfrc522/: mfrc522.py  ntag215.py  read.py  write.py
ntag_mfrc522/: constants.py  mfrc522.py  ntag215.py  read.py  write.py
